# youtube-dl-embedder

./: AUTHORS  Makefile.am  autogen.sh  configure.ac
embedder/: .gitignore  Makefile.am  youtube-dl-embedder-uninstalled.pc.in  youtube-dl-embedder.c  youtube-dl-embedder.h  youtube-dl-embedder.pc.in  youtube_dl_url_resolver.py
examples/: .gitignore  Makefile.am  example_resolver.sh  resolve_example.c
